<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".reportes.agregar_registro"
    tools:showIn="@layout/activity_agregar_registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/total_kilometraje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_full_kilometraje"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/tipo_gasolina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_tipo_gasolina"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="text"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/precio_litro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_precio_litro"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/cantidad_litros"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_qty_liters"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/total_precio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_total_precio"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/sucursal_gasolinera"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/agregar_registro_sucursal_gasolinera"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
